--- a/src/App.css
+++ b/src/App.css
@@ -7,23 +7,97 @@
   pointer-events: none;
 }
 
+.thumbnail {
+  position: relative;
+  overflow: hidden;
+  margin-bottom: 20px;
+}
+
+.button {
+  position: absolute;
+  bottom: 20px;
+  background: white !important;
+  left: 10px;
+  right: 10px;
+  margin-left: 30px;
+  margin-right: 30px;
+
+}
+
+.description {
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 20px;
+  font-size: 16px;
+  color: white;
+
+}
+
+.projEntry {
+  display: block;
+  border-radius: 15px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgb(0, 123, 255);
+  width: 100%;
+  height: 100%;
+  color: #fff;
+  transition: 0.5s; 
+  opacity: 0;
+}
+
+.abPadding{
+  padding-bottom:50px;
+}
+.projEntry:hover {opacity: 1}
+
+.entryImage{
+  border-radius: 15px;
+}
+
+.social {
+  display: inline-block;
+  height: 22px !important;
+  width: 22px !important; 
+}
+
+.bodyParagraph{
+  padding-bottom: 10px;
+}
+
+.emailResult{
+  padding-left: 10px;
+}
+
+.footerContainer {
+  padding-top: 30px !important;
+  padding-left: 0px !important;
+  padding-right: 0px !important;
+  padding-bottom: 0px !important;
+}
+
+.background {
+  background-image: url("/background-image.jpg");
+}
+
 .foot {
   font-size: 10px;
   background: rgb(0, 123, 255);
   color: white;
-  padding-left:20px;
-}
-
-.about {
-  padding-left: 40px;
-}
-
-.topFoot {
+  padding-left:30px;
+  padding-bottom: 10px;
   padding-top: 10px;
 }
 
-.bottomFoot {
-  padding-bottom: 10px;
+.outerfoot {
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+}
+
+.about {
+  padding-left: 10px;
 }
 
 @media (prefers-reduced-motion: no-preference) {
